--- a/CIT360WEB/web/index.xhtml
+++ b/CIT360WEB/web/index.xhtml
@@ -7,6 +7,9 @@
     </h:head>
     <h:body>
         Hello from Facelets
+        <h:form>
+        <h:commandButton value="Add Artist" action="#{data.addArtist()}"/>
+        </h:form>
     </h:body>
 </html>
 
