--- a/CIT360WEB/web/index.html
+++ b/CIT360WEB/web/index.html
@@ -11,13 +11,13 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
   
-		<form method="post" action="/CIT360WEB/helloworld">
+		<form method="post" action="/CIT360WEB/cortana">
                     <fieldset>
-			  <legend>Name</legend>
-			Query: <input type="text" name="q" /><br />
-			<input type="submit" value="helloworld" />
+                        <legend>Cortana</legend>
+                        <p>Hello there. What should I call you?</p>
+                        Name <input type="text" name="q" />
+			<input type="submit" value="Next" />
                     </fieldset>
 		</form>
     </body>
