--- a/CIT360WEB/web/index1.xhtml
+++ b/CIT360WEB/web/index1.xhtml
@@ -3,10 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Hello World</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        Hi there. Whats your name?
         <h:form>
         <h:commandButton value="Add Artist" action="#{data.addArtist()}"/>
         </h:form>
